--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://root:CxZNEwoGDQhOW5Tc@do-my-chores.cvbdl.mongodb.net/test
+
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
